tests/test59.rael.exp
Error [1:22]: Duplicate parameter on routine decleration
| :123 routine(:1, :2, :2) {
|                      ^
