tests/test59.rael
:123 routine(:1, :2, :2) {
    ^:1+:2
}

log :123(8, 9)
